# deepml

./: pyproject.toml
1_matrix-vector-dot-product/: solution_numpy.py  solution_pytorch.py
2_transpose-of-a-matrix/: solution_numpy.py  solution_pytorch.py
3_reshape-matrix/: solution_numpy.py  solution_pytorch.py
4_calculate-mean-by-row-or-column/: solution_numpy.py  solution_pytorch.py
5_scalar-multiplication-of-a-matrix/: solution_numpy.py  solution_pytorch.py
6_calculate-eigenvalues-of-a-matrix/: solution_numpy.py  solution_pytorch.py
